[tool.poetry]
name = "polyfactory-test"
version = "0.1.0"
description = ""
authors = ["tkk <t.kleylein@web.de>"]
readme = "README.md"
packages = [{include = "polyfactory_test"}]

[tool.poetry.dependencies]
python = "^3.9"
polyfactory = "^2.14.1"
pydantic = "^2.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

